--- a/client/styles/mixins.sass
+++ b/client/styles/mixins.sass
@@ -8,13 +8,13 @@
 
 =break($type, $param-break-1, $param-break-2: '')
 	@if $type == min
-		@media screen and (min-width: em($param-break-1))
+		@media screen and (min-width: $param-break-1)
 			@content
 	@else if $type == max
-		@media screen and (max-width: em($param-break-1))
+		@media screen and (max-width: $param-break-1)
 			@content
 	@else if $type == min-max
-		@media screen and (min-width: em($param-break-1)) and (max-width: em($param-break-2))
+		@media screen and (min-width: $param-break-1) and (max-width: $param-break-2)
 			@content
 
 =transitionWithProperties($props)
