--- a/client/styles/partials/_header.sass
+++ b/client/styles/partials/_header.sass
@@ -4,24 +4,24 @@ header
 	overflow: hidden
 
 	+break(min, $break-0)
-		padding: $gridSpacing / 2
+		padding: 0.5rem
 
 	+break(min-max, $break-0, $break-2)
-		max-height: $gridSpacing * 4.5
+		max-height: 4.5rem
 
 	+break(min, $break-2)
-		padding: $gridSpacing * 2 0
-		padding-top: $gridSpacing
-		margin: 0 $gridSpacing * 2
+		padding: 2rem 0
+		padding-top: 1rem
+		margin: 0 2rem
 
 	+break(min, $break-4)
 		margin: 0 auto
-		max-width: em($maxWidth / 2)
+		max-width: $maxWidth / 2
 
 	+transitionWithProperties(all)
 
 .header--revealed
-	max-height: $gridSpacing * 13
+	max-height: 13rem
 
 .header__details__title
 	a
@@ -88,18 +88,21 @@ header
 .header__nav__list
 	clear: both
 	float: right
-	margin-top: $gridSpacing
+	margin-top: 1rem
+
+	+break(min-max, $break-0, $break-1)
+		margin-right: 1rem
 
 .header__nav__list__item
 	display: inline
 
 	+break(min-max, $break-0, $break-1)
 		display: block
-		margin-bottom: $gridSpacing / 2
+		margin-bottom: 0.5rem
 		+tar
 
 	+break(min, $break-1)
-		padding-right: $gridSpacing
+		padding-right: 1rem
 		&:last-child
 			padding-right: 0
 
