--- a/client/styles/partials/_slider.sass
+++ b/client/styles/partials/_slider.sass
@@ -25,7 +25,7 @@
 	position: absolute;
 	top: 0
 	font-size: $largeFontSize
-	width: $gridSpacing * 3
+	width: 3rem
 	height: 100%
 	+tac
 	+transitionWithProperties(opacity)
